--- a/src/Menu.css
+++ b/src/Menu.css
@@ -1,20 +1,28 @@
+.Menu-container {
+    display: flex;
+    flex-direction: column;
+}
+
 .Project-container{
+    padding: 20px 0px 20px 20px;
+    border: 10px;
+    margin-top: 20px;
     background: 
     linear-gradient(to right,
         rgba(28, 17, 10, 0.8),
         rgba(42, 43, 42, 0.5)
     );
+    justify-content: center;
 }
 .Project-description{
-    align-content: center;
-    margin-top: 20px;
-    padding: 20px 0px 20px 20px;
-    border: 10px;
-
+    text-align: center;
+    
+    
 }
-.Codepen{
+.Code-embed-container{
     min-width: 80%;
-    height: 20px;
+    min-height: 200px;
+    text-align: center;
 }
 
 .Hidden{
